[package]
name = "prereq_map"
version = "0.1.0"
authors = ["Gabe Parmer <gparmer@gwu.edu>"]
edition = "2018"

[dependencies]
# csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
dot-writer = "0.1.2"
itertools = "0.10.1"
clap = { version = "4.4.0", features = ["derive"] }
